--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,10 @@ dt ::after {
     content: ":";
 }
 
+body {
+    background-color: rgb(240, 240, 240);
+    color: rgb(2, 74, 161);
+}
 
 
 .width-wrap {
@@ -20,7 +24,7 @@ dt ::after {
     border-left: 1px solid rgba(0, 0, 0, 0.3);
     border-right: 1px solid rgba(0, 0, 0, 0.3);
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    
+    background-color: rgb(196, 196, 196);
 }
 
 footer hr {
@@ -33,7 +37,60 @@ footer hr {
     color: rgb(0, 0, 255);
 }
 
-
-dt ::after {
+dt::after{
     content: ":";
+}
+
+h1 {
+color: rgb(51, 196, 209);
+}
+
+h2 {
+    color: rgb(51, 196, 209);
+}
+
+h3{
+    color: rgb(51, 196, 209);
+}
+
+a {
+    color: rgb(253, 236, 0);
+}
+
+header {
+    border-top: 4px solid rgba(0, 0, 0, 0.1);
+    margin-left: -2em;
+    margin-right: -2em;
+}
+
+header nav ul {
+    margin: 0;
+    padding: 0;
+}
+
+header li {
+    display: inline; 
+}
+
+header a {
+    display: inline; 
+    color: rgb(0, 0, 0);
+    padding-top: 1em;
+    margin-left: 1em;
+}
+
+header a:hover {
+    border-top: 5px solid;
+}
+
+::selection{
+    background-color: rgb(0, 225, 255);
+}
+
+header nav {
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.3);
+    margin-left: 2em;
+    margin-right: 2em;
+    padding-top: 1em;
+    padding-bottom: 0.5em;
 }
