--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,12 @@ html {
 *::after {
     box-sizing: inherit;
 }
+body {
+    font-family: "Quicksand", Georgia, serif;
+    line-height: 1.3;
+    background-color: rgb(11, 12, 16);
+    color: rgb(197, 198, 199);
+}
 
 dt ::after {
     content: ":";
@@ -22,6 +28,10 @@ h2 {
     
 h3{
     color: rgb(102, 252, 241)
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Righteous", Georgia, serif;
+    letter-spacing: 3px;
 }
     
 header {
@@ -60,12 +70,6 @@ header nav {
     margin-right: 2em;
 }
 
-body {
-    background-color: rgb(11, 12, 16);
-    color: rgb(197, 198, 199);
-}
-
-
 .width-wrap {
     max-width: 960px;
     margin: auto;
@@ -97,6 +101,10 @@ dt::after{
 
 a {
     color: rgb(180, 2, 58);
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
 }
 
 table td {
@@ -134,4 +142,21 @@ input[type="radio"] + label, input[type="checkbox"] + label {
 
 form :invalid {
     background-color: #ff000080;
+}
+
+ol {
+    list-style-type: upper-roman;
+}
+
+iframe{
+    overflow: hidden;
+    border-top-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+    
+}
+
+fieldset ul{
+    padding: 0;
+    list-style-type: none;
+    
 }
