--- a/styles/main.css
+++ b/styles/main.css
@@ -1,194 +1,212 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 body {
-    font-family: "Quicksand", Georgia, serif;
-    line-height: 1.3;
-    background-color: rgb(11, 12, 16);
-    color: rgb(197, 198, 199);
+  font-family: "Quicksand", Georgia, serif;
+  line-height: 1.3;
+  background-color: rgb(11, 12, 16);
+  color: rgb(197, 198, 199);
 }
 
 dt ::after {
-    content: ":";
+  content: ":";
 }
 
 h1 {
-    background: rgb(36,0,0);
-    background: linear-gradient(0deg, rgba(36,0,0,1) 0%, rgba(29,9,121,1) 0%, rgba(0,212,255,1) 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: rgba(0, 0, 0, 0);
+  background: rgb(36, 0, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(36, 0, 0, 1) 0%,
+    rgba(29, 9, 121, 1) 0%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: rgba(0, 0, 0, 0);
 }
 
-    
 h2 {
-    color: rgb(102, 252, 241)
+  color: rgb(102, 252, 241);
 }
-    
-h3{
-    color: rgb(102, 252, 241)
-}
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Righteous", Georgia, serif;
-    letter-spacing: 3px;
-}
-    
-header {
-    border-top: 4px solid rgba(0, 0, 0, 0.1);
-    margin-left: -2em;
-    margin-right: -2em;
-}
-    
-header nav ul {
-    margin: 0;
-    padding: 0;
-}
-    
-header li {
-    display: inline; 
-}
-    
-header a {
-    display: inline-block; 
-    color: rgb(69, 162, 158);
-    margin-left: 1em;
-    margin-right: 1em;
-    padding-bottom: 0.5em;
-    padding-top: 1em;
-    border-top: 4px solid transparent;
-    margin-top: -4px;
 
-    font-weight: bold;
-    text-transform: uppercase;
+h3 {
+  color: rgb(102, 252, 241);
 }
-    
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Righteous", Georgia, serif;
+  letter-spacing: 3px;
+}
+
+header {
+  border-top: 4px solid rgba(0, 0, 0, 0.1);
+  margin-left: -2em;
+  margin-right: -2em;
+}
+
+header nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+header li {
+  display: inline;
+}
+
+header a {
+  display: inline-block;
+  color: rgb(69, 162, 158);
+  margin-left: 1em;
+  margin-right: 1em;
+  padding-bottom: 0.5em;
+  padding-top: 1em;
+  border-top: 4px solid transparent;
+  margin-top: -4px;
+
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 header a:hover {
-    border-top: 4px solid rgb(69, 162, 158);
-    text-decoration: none;
+  border-top: 4px solid rgb(69, 162, 158);
+  text-decoration: none;
 }
-    
+
 header nav {
-    border-bottom: 1px dotted rgba(0, 0, 0, 0.3);
-    margin-left: 2em;
-    margin-right: 2em;
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.3);
+  margin-left: 2em;
+  margin-right: 2em;
 }
 
 .width-wrap {
-    max-width: 960px;
-    margin: auto;
-    padding: 0 2em 2em 2em;
-    margin-bottom: 3em;
-    border-left: 1px solid rgba(0, 0, 0, 0.3);
-    border-right: 1px solid rgba(0, 0, 0, 0.3);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    background-color: rgb(31, 40, 51);
+  max-width: 960px;
+  margin: auto;
+  padding: 0 2em 2em 2em;
+  margin-bottom: 3em;
+  border-left: 1px solid rgba(0, 0, 0, 0.3);
+  border-right: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  background-color: rgb(31, 40, 51);
 }
 
 footer hr {
-    width: 50vw;
-    min-width: 300px;
-    max-width: 890px;
-    margin: 3em 0 2em 0;
-    border: none;
-    border-bottom: 3px dotted;
-    color: rgb(102, 252, 241);
+  width: 50vw;
+  min-width: 300px;
+  max-width: 890px;
+  margin: 3em 0 2em 0;
+  border: none;
+  border-bottom: 3px dotted;
+  color: rgb(102, 252, 241);
 }
 
-::selection{
-    background-color: rgb(0, 225, 255);
+::selection {
+  background-color: rgb(0, 225, 255);
 }
 
-dt::after{
-    content: ":";
+dt::after {
+  content: ":";
 }
 
 a {
-    color: rgb(180, 2, 58);
-    text-decoration: none;
+  color: rgb(180, 2, 58);
+  text-decoration: none;
 }
-a:hover{
-    text-decoration: underline;
+a:hover {
+  text-decoration: underline;
 }
-
 
 table td {
-    padding: 0.3em 1em 0.3em 1em;
+  padding: 0.3em 1em 0.3em 1em;
 }
 
-thead td, 
+thead td,
 tfoot td,
 th {
-    background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 td {
-    background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 tbody tr:nth-child(even) td {
-    background-color: rgba(255, 255, 255, 0.15);
+  background-color: rgba(255, 255, 255, 0.15);
 }
 
 label {
-    display: block;
- }
+  display: block;
+}
 
-input[type="radio"] + label, input[type="checkbox"] + label {
-    display: inline;
+input[type="radio"] + label,
+input[type="checkbox"] + label {
+  display: inline;
 }
 
 [type="submit"] {
-    border: none;
-    padding: 1em 3em 1em 3em;
-    color: rgb(87, 66, 207);
-    background-color: rgb(29, 29, 29);
+  border: none;
+  padding: 1em 3em 1em 3em;
+  color: rgb(87, 66, 207);
+  background-color: rgb(29, 29, 29);
 }
 
 form :invalid {
-    background-color: #ff000080;
+  background-color: #ff000080;
 }
 
 ol {
-    list-style-type: upper-roman;
+  list-style-type: upper-roman;
 }
 
-iframe{
-    overflow: hidden;
-    border-top-right-radius: 2em;
-    border-bottom-left-radius: 2em;
-    
+iframe {
+  overflow: hidden;
+  border-top-right-radius: 2em;
+  border-bottom-left-radius: 2em;
 }
 
-fieldset ul{
-    padding: 0;
-    list-style-type: none;
-    
+fieldset ul {
+  padding: 0;
+  list-style-type: none;
 }
 
 .bio {
-    column-count: 3;
-    column-gap: 2em;
+  column-count: 3;
+  column-gap: 2em;
 }
 
 div.bio table {
-    column-span: all;
-    margin-top: 1em;
-    border-collapse: collapse;
-    caption-side: bottom;
+  column-span: all;
+  margin-top: 1em;
+  border-collapse: collapse;
+  caption-side: bottom;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .my-dog-walking {
-    padding: 2%;
-    background-color: white;
-    box-shadow: 5px 5px rgb(38, 0, 255) ;
+  padding: 2%;
+  background-color: white;
+  box-shadow: 5px 5px rgb(38, 0, 255);
 }
+
+footer {
+  font-size: 75%;
+  text-align: center;
+}
+
+[href="#top"]:hover {
+  text-shadow: 2px 2px 0 rgb(255, 255, 255);
+  text-decoration: none;
+}
+
