--- a/styles/main.css
+++ b/styles/main.css
@@ -219,7 +219,7 @@ footer {
   text-decoration: none;
 }
 
-.my-fav-things label + div {
+.favourites label + div {
   display: none;
   width: 100%;
 
@@ -228,29 +228,55 @@ footer {
 
   
 }
-.my-fav-things input[type = "radio"] {
+.favourites input[type = "radio"] {
   display: none;
 }
 
-.my-fav-things input[type = "radio"]:checked+label + div {
+.favourites input[type = "radio"]:checked+label + div {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 2em;
 }
 
-.my-fav-things {
+.favourites {
   display: flex;
   flex-wrap: wrap;
 
 }
-.my-fav-things label {
+.favourites label {
   order: -1;
   margin-left: 1em;
   margin-right: 1em;
 }
 
-.my-fav-things input[type = "radio"]:checked + label > h3 {
+.favourites input[type = "radio"]:checked + label > h3 {
   border-bottom: 5px solid rgb(88, 12, 151);
   border-width: 3px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  row-gap: 10px;
+  column-gap: 10px;
+}
+.gallery img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.gallery .row-span-2{
+  grid-row: span 2;
+}
+
+.gallery .col-span-2 {
+  grid-column: span 2;
+}
+
+.gallery a:hover {
+  transform: scale(1.1);
+
 }
