--- a/styles/main.css
+++ b/styles/main.css
@@ -252,7 +252,7 @@ footer {
 
 .gallery {
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   row-gap: 10px;
   column-gap: 10px;
 }
