--- a/styles/main.css
+++ b/styles/main.css
@@ -253,7 +253,7 @@ footer {
 
 .gallery {
   display: grid;
-  grid-template-columns: minmax(180px, auto);
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   row-gap: 10px;
   column-gap: 10px;
 }
